added trasitions to social links & updated read me

--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
                     <a class="btn btn-lg blue-btn" href="contact.html">Book a shoot!</a>
                     <div class="scroll-icon-container text-center d-none d-md-block">
                         <p>Scroll for more info on shoots.</p>
-                        <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
+                        <a class="scroll-icon hvr-sink" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
                     </div>
                 </section>
             </div>
@@ -149,25 +149,25 @@
                 <h5>Follow my socials:</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="https://en-gb.facebook.com/" target="_blank">
+                        <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.pinterest.co.uk/" target="_blank">
+                        <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.youtube.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
