--- a/gallery.html
+++ b/gallery.html
@@ -137,45 +137,45 @@
     </div>
 </div>
 
-    <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col-sm-6 text-center">
-                <h5>Follow my socials:</h5>
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a href="https://en-gb.facebook.com/" target="_blank">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.pinterest.co.uk/" target="_blank">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.youtube.com/" target="_blank">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">Youtube</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-6 text-right">
-                <p class="copyright-text inline-block">
-                    Copyright 2021 - Photographer
-                </p>
-            </div>
+<footer class="container-fluid">
+    <div id="footer-details" class="row">
+        <div class="col-sm-6 text-center">
+            <h5>Follow my socials:</h5>
+            <ul class="list-inline social-links">
+                <li class="list-inline-item">
+                    <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
+                        <i class="fa fa-pinterest" aria-hidden="true"></i>
+                        <span class="sr-only">Pinterest</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
+                        <i class="fa fa-youtube" aria-hidden="true"></i>
+                        <span class="sr-only">Youtube</span>
+                    </a>
+                </li>
+            </ul>
         </div>
+        <div class="col-sm-6 text-right">
+            <p class="copyright-text inline-block">
+                Copyright 2021 - Photographer
+            </p>
+        </div>
+    </div>
 
-    </footer>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
