--- a/contact.html
+++ b/contact.html
@@ -146,25 +146,25 @@
                 <h5>Follow my socials:</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="https://en-gb.facebook.com/" target="_blank">
+                        <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.pinterest.co.uk/" target="_blank">
+                        <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.youtube.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
