index.html pull fix, add smooth scroll to html, add hover transition and lazy loading to gallery

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
 
             <div class="form-row">
                 <div class="col">
-                    <input class="btn btn-lg blue-btn" type="submit">
+                    <input class="btn btn-lg blue-btn hvr-grow" type="submit">
                 </div>
             </div>
         </form>
