--- a/gallery.html
+++ b/gallery.html
@@ -57,23 +57,23 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-1.jpg" alt="Man leaning on wall">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-1.jpg" alt="Man leaning on wall">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-2.jpg" alt="Man checking phone">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-2.jpg" alt="Man checking phone">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-3.jpg" alt="Woman with skateboard">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-3.jpg" alt="Woman with skateboard">
             </a>
         </div>
         <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/urban-4.jpg" alt="Man and woman with skateboards">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-4.jpg" alt="Man and woman with skateboards">
             </a>
         </div>
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/urban-5.jpg" alt="Skateboards and sneakers">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/urban-5.jpg" alt="Skateboards and sneakers">
             </a>
         </div> 
     </div>
@@ -86,23 +86,23 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-1.jpg" alt="Man in studio-3">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-1.jpg" alt="Man in studio-3">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-2.jpg" alt="Woman posing with hands">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-2.jpg" alt="Woman posing with hands">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-3.jpg" alt="Man with hand on chin">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-3.jpg" alt="Man with hand on chin">
             </a>
         </div>
         <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/studio-4.jpg" alt="Boy with plant pot">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-4.jpg" alt="Boy with plant pot">
             </a>
         </div>
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/studio-5.jpg" alt="Woman Shouting">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/studio-5.jpg" alt="Woman Shouting">
             </a>
         </div> 
     </div>
@@ -115,23 +115,23 @@
     <div class="row">
 
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-1.jpg" alt="Birthday with sparklers">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-1.jpg" alt="Birthday with sparklers">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-2.jpg" alt="Woman singing">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-2.jpg" alt="Woman singing">
             </a>
         </div>
         <div class="col-sm-6 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-3.jpg" alt="Live band on stage">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-3.jpg" alt="Live band on stage">
             </a>
         </div>
         <div class="col-sm-12 col-md-8 no-padding">
-                <img src="assets/images/Gallery/event-4.jpg" alt="silhouette of man with lighting equipment">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-4.jpg" alt="silhouette of man with lighting equipment">
             </a>
         </div>
         <div class="col-sm-12 col-md-4 no-padding">
-                <img src="assets/images/Gallery/event-5.jpg" alt="Man singing whilst people taking pictures with phones">
+                <img class="hvr-grow-img" loading="lazy" src="assets/images/Gallery/event-5.jpg" alt="Man singing whilst people taking pictures with phones">
             </a>
         </div> 
     </div>
