--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <a class="nav-link" href="latest.html">Latest</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Gallery
                         </a>
                         <ul class="dropdown-menu text-center" aria-labelledby="navbarDropdownMenuLink">
@@ -60,12 +60,12 @@
                     <p class="lead">
                         Hello and welcome to my site. I am a manchester based photographer specializing in Urban,
                         Studio and Event Photography.
-                        
+
                     </p>
-                    <a class="btn btn-lg blue-btn" href="contact.html">Book a shoot!</a>
+                    <a class="btn btn-lg blue-btn hvr-grow" href="contact.html">Book a shoot!</a>
                     <div class="scroll-icon-container text-center d-none d-md-block">
                         <p>Scroll for more info on shoots.</p>
-                        <a class="scroll-icon" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
+                        <a class="scroll-icon hvr-sink" href="#scroll-point"><i class="fas fa-chevron-circle-down"></i></a>
                     </div>
                 </section>
             </div>
@@ -75,73 +75,77 @@
     <hr id="scroll-point">
 
     <div class="card-container">
-    <div class="row">
-        <div class="col-12 no-padding">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Urban-Card.jpg" alt="Street at night">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Urban Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="gallery.html#urban-gallery">View urban gallery</a>
+        <div class="row">
+            <div class="col-12 no-padding">
+                <div class="card index-card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-7 cardImg-container">
+                            <img src="assets/images/index/Urban-Card.jpg" alt="Street at night">
+                        </div>
+                        <div class="col-md-5">
+                            <div class="card-body">
+                                <h3 class="card-title">Urban Photography</h3>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                                    optio
+                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#urban-gallery">View urban gallery</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="card-container">
-    <div class="row">
-        <div class="col-12 no-padding">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-5 order-1 order-sm-1 order-md-0">
-                        <div class="card-body">
-                            <h3 class="card-title">Studio Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="gallery.html#studio-gallery">View studio gallery</a>
+    <div class="card-container">
+        <div class="row">
+            <div class="col-12 no-padding">
+                <div class="card index-card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-5 order-1 order-sm-1 order-md-0">
+                            <div class="card-body">
+                                <h3 class="card-title">Studio Photography</h3>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                                    optio
+                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#studio-gallery">View studio
+                                    gallery</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
-                        <img src="assets/images/index/Studio-Card.jpg" alt="Studio with equipment">
+                        <div class="col-md-7 order-0 order-sm-0 order-md-1 cardImg-container">
+                            <img src="assets/images/index/Studio-Card.jpg" alt="Studio with equipment">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="card-container">
-    <div class="row">
-        <div class="col-12 no-padding">
-            <div class="card index-card mb-3">
-                <div class="row no-gutters">
-                    <div class="col-md-7 cardImg-container">
-                        <img src="assets/images/index/Event-Card.jpg" alt="Hands raised at concert">
-                    </div>
-                    <div class="col-md-5">
-                        <div class="card-body">
-                            <h3 class="card-title">Event Photography</h3>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta optio
-                                distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
-                                eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
-                            <a class="btn btn-lg blue-btn" href="gallery.html#event-gallery">View event gallery</a>
+    <div class="card-container">
+        <div class="row">
+            <div class="col-12 no-padding">
+                <div class="card index-card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-7 cardImg-container">
+                            <img src="assets/images/index/Event-Card.jpg" alt="Hands raised at concert">
+                        </div>
+                        <div class="col-md-5">
+                            <div class="card-body">
+                                <h3 class="card-title">Event Photography</h3>
+                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                                    optio
+                                    distinctio inventore recusandae nam fugiat minima et fuga, ea aut nostrum officia
+                                    eveniet quibusdam. Id quos beatae tempora commodi reprehenderit..</p>
+                                <a class="btn btn-lg blue-btn hvr-grow" href="gallery.html#event-gallery">View event gallery</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -149,25 +153,25 @@
                 <h5>Follow my socials:</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="https://en-gb.facebook.com/" target="_blank">
+                        <a class="hvr-grow" href="https://en-gb.facebook.com/" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.pinterest.co.uk/" target="_blank">
+                        <a class="hvr-grow" href="https://www.pinterest.co.uk/" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.instagram.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.instagram.com/" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="https://www.youtube.com/" target="_blank">
+                        <a class="hvr-grow" href="https://www.youtube.com/" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">Youtube</span>
                         </a>
